--- a/src/public/index.html
+++ b/src/public/index.html
@@ -56,7 +56,7 @@
           </div>
         </div>
       </div>
- <div class="container pull-right" id="chatbox">
+ <div class="container " id="chatbox">
 
 
     <div class="row chat-window col-xs-12 col-sm-8  col-md-4 pull-right active" id="chat_window_1 " >
